deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jifelog-app
  labels:
    app: jifelog-app
spec:
  type: ClusterIP
  selector:
    app: jifelog-app
  ports:
    - name: http
      port: 80
      targetPort: 80
