deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jifelog-app-ingress
spec:
  ingressClassName: public
